fix reflect throwing npe on old versions